# Skydiving-Portal

./: .env.example  .gitignore  CLAUDE.md  PROMPT.md  README.md
.claude/: settings.local.json
backend/: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
backend/migrations/: 0001_initial_schema.down.sql  0001_initial_schema.sql  README.md
backend/scripts/: create_test_user.py
backend/seed/: seed_test_user.sql
backend/src/: config.py  db.py  deps.py  main.py
backend/src/auth/: models.py  password.py  router.py  schemas.py  service.py  sessions.py
backend/src/bookings/: models.py  router.py  schemas.py  service.py
backend/src/integrations/: email.py
backend/src/users/: models.py  router.py  schemas.py  service.py
frontend/: .env.example  .gitignore  .npmrc  .prettierignore  CLAUDE.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.mjs  tailwind.config.ts  tsconfig.json  vitest.config.ts
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/confirm-email/: page.tsx
frontend/src/app/forgot-password/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/portal/: error.tsx  layout.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/reset-password/: page.tsx
frontend/src/components/forms/: DateField.tsx  FieldError.tsx  (+6 more)
frontend/src/content/: checklist.ts  faqs.ts  forms.ts  sponsorship-policy.ts
frontend/src/lib/: api.ts  auth.ts  format.ts  mock-data.ts  units.test.ts  units.ts  validation.test.ts  validation.ts
frontend/src/types/: index.ts  vanta.d.ts
(+50 files in other folders)
